[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Dragonlord1005 <<>>"]
description = ""
name = "gym-bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
tensorflow-cpu = { version = "^2.8.1", python = ">=3.8,<3.10" }
pyglet = "^1.5.21"
gym = "^0.25.0"
[tool.poetry.dev-dependencies]
